--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,3 +47,19 @@ header{
     font-weight: 700;
     margin-bottom: 10px;
 }
+/* failures section */
+.failures{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 100px;
+    margin-bottom: 80px;
+    height: 80vh;
+}
+.failures-title{
+    color: #151414;
+    font-family: "Work Sans";
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
