--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ header{
 .plan{
     justify-items: center;
     margin-top: 200px;
-    margin-bottom: 200px;
+    margin-bottom: 150px;
 }
 .skills{
     display: flex;
@@ -92,3 +92,28 @@ header{
 }
 
 /* call section */
+.call{
+    background-image: url(../images/watch.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 200px;
+    width: 1000px;
+    position: relative;
+    border-radius: 8px;
+    padding-left: 70px;
+    margin-left: 150px;
+    margin-bottom: 190px;
+    margin-top: 0;
+
+
+    /* text-align: center; */
+}
+.call-title{
+    color: #FFF;
+    font-family: "Work Sans";
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    padding-top: 15px;
+}
